@@ -30,13 +30,15 @@
    - Upgrade DBMS to v26.
    - ofaAccountsBook class: renamed to ofaAccountsChart (todo #816).
    - ofaLedgerClose: have a 'All ledgers' button (todo #815).
-   - ofa_ledger_treeview_get_selection(): new method.
-   - ofa_reconciliation_set_account(): new method.
-   - ofa_settlement_set_account(): new method.
+   - ofo_bat_get_account(): new method.
+   - ofo_bat_set_account(): new method.
    - ofo_dossier_get_last_closing_date(): new method.
    - ofo_dossier_set_last_closing_date(): new method.
    - ofo_dossier_get_prev_exe_last_entry(): new method.
    - ofo_dossier_set_prev_exe_last_entry(): new method.
+   - ofa_ledger_treeview_get_selection(): new method.
+   - ofa_reconciliation_set_account(): new method.
+   - ofa_settlement_set_account(): new method.
 
 -----------------------------------------------------------------------
  Version 0.39
