@@ -1,5 +1,12 @@
 2015-04-24 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/api/ofo-bat.h,
+	* src/core/ofo-bat.c:
+	- ofo_bat_get_account(), ofo_bat_set_account(): new methods.
+
+	* src/ui/ofa-bat-properties-bin.c,
+	* src/ui/ofa-bat-properties-bin.ui: display account number.
+
 	* src/ui/ofa-closing-parms-bin.c:
 	- slightly increase the width of the account number field.
 
